# flux

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  setup.sh
.github/workflows/: ci.yml
cmake/: FetchJUCE.cmake  FetchTracktion.cmake
docker/: dummy.cpp  prebuild.cmake
docs/: ARCHITECTURE.md
scripts/: build.sh  docker-build-ci.sh  docker-build.sh  run.sh  test.sh  verify-structure.sh
src/app/: Application.cpp  Application.h  MainComponent.cpp  MainComponent.h  MainWindow.cpp  MainWindow.h
src/engine/: EditController.cpp  EditController.h  EngineWrapper.cpp  EngineWrapper.h
src/ui/: FluxLookAndFeel.cpp  FluxLookAndFeel.h  Fonts.cpp  Fonts.h
tests/: CMakeLists.txt  test_gui_smoke.cpp  test_main.cpp  test_render_smoke.cpp
